--- a/mysite/mainApp/templates/mainApp/wrapper.html
+++ b/mysite/mainApp/templates/mainApp/wrapper.html
@@ -19,6 +19,8 @@
         <a href="/" class="btn btn-success btn-lg">Главная страница</a>
         <a href="/news" class="btn btn-primary btn-lg">Новости </a>
         <a href="/contact" class="btn btn-info btn-lg">Контакты &raquo</a>
+        <a href="/page_denis_vorko" class="btn btn-danger btn-lg">Ворко страница</a>
+
       </p>
     </div>
   </div>
