add six csrd on Vorko Page

--- a/mysite/page_denis_vorko/static/page_denis_vorko/css/mystyle.css
+++ b/mysite/page_denis_vorko/static/page_denis_vorko/css/mystyle.css
@@ -1,3 +1,18 @@
 body {
-background: #ccff00;
+background: #ccffff;
+}
+.nav-link {
+	color: #fff;
+}
+.nav {
+	justify-content: space-between;
+	padding: 0 50px;
+
+}
+.nav-item {
+	padding-left: 120px;
+}
+.row {
+	justify-content: space-around;
+	margin-top: 50px;
 }
