--- a/mysite/page_denis_vorko/templates/page_denis_vorko/wrapper.html
+++ b/mysite/page_denis_vorko/templates/page_denis_vorko/wrapper.html
@@ -13,17 +13,18 @@
 <body>
     <nav class="nav navbar-dark bg-primary">
         <div class="navbar-brand">Denis@Vorko<sup>tm</sup></div>
-       <div class=" navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+       
+    <ul class="nav">
+      <li class="nav-item">
         <a class="nav-link" href="#">VC <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Instagramm</a>
       </li>
     </ul>
+       
     </nav>
-    <h1>I'm Vorko Page</h1>
+   
     {% block content %}
     {% endblock %}
 </body>
