--- a/mysite/page_denis_vorko/templates/page_denis_vorko/wrapper.html
+++ b/mysite/page_denis_vorko/templates/page_denis_vorko/wrapper.html
@@ -16,10 +16,10 @@
        
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">VC <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#"><img class="icon" src="{% static 'page_denis_vorko/img/facebook1.png' %}" alt="Facebook"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Instagramm</a>
+        <a class="nav-link" href="#" ><img class="icon" src="{% static 'page_denis_vorko/img/instagram1.jpeg' %}" alt="Instagram"></a>
       </li>
     </ul>
        
