--- a/mysite/page_denis_vorko/templates/page_denis_vorko/index.html
+++ b/mysite/page_denis_vorko/templates/page_denis_vorko/index.html
@@ -4,60 +4,18 @@
 {% block content %}
 <div class="container-fluid">
 	<div class="row">
-		
-			<div class="card" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">Название карточки 1</h5>
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-					  </div>
-			</div>
 
+		{% for cont in numbers %}
 			<div class="card" style="width: 18rem;">
 			  <img src="..." class="card-img-top" alt="...">
 					  <div class="card-body">
-					    <h5 class="card-title">Название карточки 2</h5>
+					    <h5 class="card-title">Карточка № {{cont}}</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					    <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
 					  </div>
 			</div>
+		{% endfor %}
 
-			<div class="card" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">Название карточки 2</h5>
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-					  </div>
-			</div>
-			<div class="card" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">Название карточки 2</h5>
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-					  </div>
-			</div>
-			<div class="card" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">Название карточки 2</h5>
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-					  </div>
-			</div>
-			<div class="card" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">Название карточки 2</h5>
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-					  </div>
-			</div>
-
-
-		
 	</div>
 </div>	
 <p>include content</p>
