added zagolovok vorko page

--- a/mysite/page_denis_vorko/templates/page_denis_vorko/index.html
+++ b/mysite/page_denis_vorko/templates/page_denis_vorko/index.html
@@ -2,12 +2,15 @@
 
 
 {% block content %}
+<div class="container-fluid, zagolovok">
+      <h1>Работы автора</h1>
+    </div>
 <div class="container-fluid">
 	<div class="row">
 
 		{% for cont in numbers %}
 			<div class="card" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
+			  <img src="..." class="card-img-top" alt="img">
 					  <div class="card-body">
 					    <h5 class="card-title">Карточка № {{cont}}</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
