--- a/mysite/page_denis_vorko/static/page_denis_vorko/css/mystyle.css
+++ b/mysite/page_denis_vorko/static/page_denis_vorko/css/mystyle.css
@@ -1,6 +1,10 @@
 body {
 background: #ccffff;
 }
+div.zagolovok {
+	text-align: center;
+	margin-top: 1rem;
+}
 .nav-link {
 	color: #fff;
 }
@@ -14,7 +18,7 @@ background: #ccffff;
 }
 .row {
 	justify-content: space-around;
-	margin-top: 1rem;
+
 }
 img.icon {
 	width: 10rem;
@@ -24,4 +28,8 @@ img.icon {
 }
 div.card {
 	margin-top: 1rem;
+}
+h1 {
+
+	font-size: 3rem;
 }
