--- a/mysite/page_denis_vorko/templates/page_denis_vorko/wrapper.html
+++ b/mysite/page_denis_vorko/templates/page_denis_vorko/wrapper.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'page_denis_vorko/css/mystyle.css' %}" type="text/css">
     <meta charset="UTF-8">
-    <title>Vorko Site</title>
+    <title>
+        {% block title %}
+            Vorko_site
+        {% endblock %}
+    </title>
 </head>
 <body>
     <nav class="nav navbar-dark bg-primary">
